# ISI_MonitoringKelembapanBuahwithBlockchain

./: .env  Cargo.toml  Laporan_Kelompok 2.docx  README.md  package-lock.json  qt.py
blockchain-dapp/: app.js  index.html  package-lock.json
blockchain-dapp/contracts/: monitoring.sol
blockchain-dapp/scripts/: deploy.js
modbus_client/: Cargo.toml
modbus_client/src/: main.rs
src/: main.rs
tcp_server/: Cargo.toml
tcp_server/abi/: Monitoring.json
tcp_server/src/: main.rs
