[package]
name = "tcp_server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Dependensi lama untuk InfluxDB & Web Server
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.11"
chrono = "0.4"

# --- DEPENDENSI BARU UNTUK BLOCKCHAIN ---
# Pastikan semua baris ini ada dan benar
ethers = { version = "2.0", features = ["rustls"] }
dotenv = "0.15.0"
hex = "0.4.3"
